Fixed missing live check header bar with BOW contrast

--- a/pupil-spa/src/assets/shared-styles/elements/_colour-contrast.scss
+++ b/pupil-spa/src/assets/shared-styles/elements/_colour-contrast.scss
@@ -98,7 +98,7 @@
   }
 
   // Hide the blue header bar on all contrast pages
-  #global-header-bar {
+  .colour-contrast-#{$key} #global-header-bar {
     display: none !important;
   }
 
